# aho-corasick

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .provenance.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD-PARTY-NOTICES.txt  aho-corasick-wasm32-wasi.d.ts  aho-corasick.wasi-browser.d.ts  aho-corasick.wasi-browser.js  aho-corasick.wasi.cjs  browser.js  bunfig.toml  deny.toml  index.cjs  index.d.ts  index.js  lib.d.ts  lib.js  lib.mjs  lib.wasm.js  llms.txt  oxlint.config.ts  package-lock.json  package.json  sbom.cdx.json  tsconfig.json  tsdown.config.mts  tsdown.config.ts  wasi-worker-browser.mjs
.ai/: manifest.json
.ai/local/: agents.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ai-sync.yml  ci.yml  cla.yml  provenance-nightly.yml  provenance-sync.yml  release.yml  sbom.yml
__bench__/: buf-vs-string.ts  correctness.ts  download-corpus.sh  helpers.ts  index.ts  package.json  speed.ts  unicode.ts
__bench__/corpus/: .gitkeep
__test__/: cross-library.spec.ts  index.spec.ts  properties.spec.ts  vite.spec.ts
crates/core/: Cargo.toml
crates/core/src/: case_folding.rs  lib.rs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: package.json
npm/wasm32-wasi/: README.md  aho-corasick.wasi-browser.js  aho-corasick.wasm32-wasi.wasm  package.json
npm/win32-x64-msvc/: package.json
provenance/: THIRD-PARTY-NOTICES.txt  report.json  sbom.cdx.json
scripts/: build-native.mjs  check-release-tarballs.mjs  check-wasm-compat.mjs  ensure-wasm-artifact.mjs  fix-napi-loader.mjs  prepare-release-package.mjs  runtime-smoke.mjs  version-sync.mjs
src/: case_folding.rs  core.ts  index-cjs.ts  index.ts  lib.rs  lib.ts  vite.ts  wasm-fetch-guard.ts  wasm.ts
wasm/: package.json
