[package]
name = "stella-aho-corasick"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
aho-corasick = "1"
napi = { version = "3", default-features = false, features = [
  "napi9",
  "serde-json",
] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
